--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,23 @@
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+/* Add this CSS to position the video background */
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Set z-index to -1 to ensure the video is behind other content */
+}
+
+#video-bg {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+/* Rest of your CSS styles here */
 
 *,
 *::before,
